# RobotArmPackages2

./: .gitignore  LICENSE  README.md  install.py  install.sh  install_cv_packages.sh  install_functions.sh  install_ros.sh  install_workspace.sh  rebuild.sh  setup.sh  setup_workspace.sh  test.sh
src/computer_vision/: .gitignore  README.md  package.xml  setup.py
src/computer_vision/computer_vision/: board_detection.py  cam_params_template.yaml  video_process_test.py
src/computer_vision/config/: cam_params_template.yaml  camera_info_template.yaml  configuration.py
src/computer_vision/train/: .gitignore  chess_piece_detection.py  requirements.txt
src/control_logic/: package.xml  setup.cfg  setup.py
src/control_logic/control_logic/: chess_bot.py
src/custom_interfaces/: CMakeLists.txt  README.md  package.xml
src/custom_interfaces/srv/: RequestEngineMove.srv
src/hardware/: README.md  package.xml  setup.py
src/hardware/arduino/: arduino.ino  data_structures.h
src/hardware/arduino/continuity_checker/: continuity_checker.ino
src/hardware/arduino/motor_controller/: motor_controller.ino
src/hardware/hardware/: hardware.py
src/hardware_interface/: package.xml  setup.py
src/hardware_interface/arduino_sketch/: arduino_sketch.ino
src/hardware_interface/hardware_interface/: hardware_interface.py
src/interfaces/: CMakeLists.txt  package.xml
src/motion_planning/: package.xml  setup.py
src/rbx1_description/: package.xml  setup.cfg  setup.py
src/rbx1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/rbx1_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  rbx1_description.ros2_control.xacro  rbx1_description.srdf  rbx1_description.urdf.xacro  ros2_controllers.yaml
src/rbx1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/stub_scripts/: README.md  package.xml  setup.cfg  setup.py
src/stub_scripts/stub_scripts/: compressed_image_publisher.py  interactive_chess_bot_interface.py
src/task_planning/: package.xml  setup.py
src/task_planning/resource/: task_plan_diagram.drawio  task_planning
src/task_planning/task_planning/: state_machine.py  test_subscriber.py
